[package]
name = "grass"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"

dashmap = "5.0.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = "0.16.1"

crossbeam = "0.8.1"
futures = "0.3.17"
futures-util = "0.3.17"

r2d2 = "0.8.9"
redis = { version = "0.21.4", features = ["tokio-comp"] }

serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.71"
flexbuffers = "2.0.0"

num_enum = "0.5.4"
envy = "0.4.2"
toml = "0.5.8"
rand = "0.8.4"

tonic = "0.6.1"
prost = "0.9.0"
prost-types = "0.9"
bytes = "1.1.0"

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost"] }